--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,10 +1,14 @@
-import React from "react"
-import ReactDOM from "react-dom/client"
-import App from "./App.jsx"
-import "./index.css"
+<!doctype html>
+<html lang="es">
+  <head>
+    <meta charset="UTF-8" />
 
-ReactDOM.createRoot(document.getElementById("root")).render(
-  <React.StrictMode>
-    <App />
-  </React.StrictMode>,
-)
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>LibroConecta - Conecta libros, comparte historias</title>
+    <meta name="description" content="Intercambia, regala o encuentra el próximo libro que quieres leer en LibroConecta." />
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
+</html>
