--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LibroConecta - Conecta libros, comparte historias</title>
-    <meta name="description" content="Intercambia, regala o encuentra el próximo libro que quieres leer en LibroConecta." />
+    <meta
+      name="description"
+      content="Intercambia, regala o encuentra el próximo libro que quieres leer en LibroConecta."
+    />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.svg" />
   </head>
   <body>
     <div id="root"></div>
